[build-system]
requires = [
    "robotpy-build>=2020.1.6,<2021.0.0",
    "wpilib>=2020.2.2.0,<2021.0.0",
]

[tool.robotpy-build]
base_package = "rev.color"

[tool.robotpy-build.wrappers."rev.color".maven_lib_download]
artifact_id = "ColorSensorV3-cpp"
group_id = "com.revrobotics.frc"
repo_url = "http://www.revrobotics.com/content/sw/color-sensor-v3/sdk/maven"
version = "1.0.1"

use_sources = true
sources = [
    "CIEColor.cpp",
    "ColorMatch.cpp",
    "ColorSensorV3.cpp",
]
sources_classifier = "source"

[tool.robotpy-build.wrappers."rev.color"]
name = "rev_color"
depends = ["wpilibc", "wpilib_core", "wpiHal"]

sources = [
    "rev/color/revcolor.cpp"
]

generate = [
    { CIEColor = "rev/CIEColor.h" },
    { ColorMatch = "rev/ColorMatch.h" },
    { ColorSensorV3 = "rev/ColorSensorV3.h" },
]
generation_data = "gen"

[tool.robotpy-build.metadata]
name = "robotpy-rev-color"
description = "Binary wrapper for REV Color Sensor library"
author = "RobotPy Development Team"
author_email = "robotpy@googlegroups.com"
url = "https://github.com/robotpy/robotpy-rev-color"
license = "BSD-3-Clause"
install_requires = [
    "wpilib>=2020.2.2.0,<2021.0.0",
]
